--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "stimulus-password-visibility": "^2.0.0"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
